GNOME Bugzilla – Bug 783657
gstomxvideoenc.c: When we fail to negotiate, make it clear why.
Last modified: 2017-06-12 06:57:07 UTC
When omxvideoenc fails to negotiate and aborts the stream, it needs to be made clear that omxvideoenc was the one that failed.
Created attachment 353565 [details] [review] When we fail to negotiate, make it clear why.
commit 463929af3e29ae4ae024a63a9004e3693324476b Author: Graham Leggett <minfrin@sharp.fm> Date: Sun Jun 11 12:32:01 2017 +0000 omxvideoenc: Improve debug output when setting codec state due to new codec_data fails https://bugzilla.gnome.org/show_bug.cgi?id=783657