omxvideoenc: Improve debug output when setting codec state due to new codec_data fails

https://bugzilla.gnome.org/show_bug.cgi?id=783657